--- a/index.html
+++ b/index.html
@@ -4,29 +4,127 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <h1>Hello world!</h1>
-    </div>
-  </div>
+  <header class="page-header">
 
+    <div class="page-header__navbar">
+      <div class="container">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <div class="col-sm">
-        One of three columns
-      </div>
-      <div class="col-sm">
-        One of three columns
+        <nav class="navbar navbar-expand-lg navbar-light">
+
+          <a class="navbar-brand" href="#">
+            <img src="img/icon-3.png" alt="site logo">
+          </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Products
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Lorem ipsum dolor</a>
+                  <a class="dropdown-item" href="#">Sit amet</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Consectetur adipisicing </a>
+                  <a class="dropdown-item" href="#">Architecto consequatur</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Payment</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Shipping</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0 page-header__navbar-search">
+              <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+            </form>
+            <button class="btn btn-outline-success my-2 my-sm-0 page-header__cart-btn" type="submit"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>4</span></button>
+          </div>
+
+        </nav>
+
       </div>
     </div>
-  </div>
+
+    <div class="row page-header__carousel">
+      <div class="container">
+
+        <div id="header-carousel" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#header-carousel" data-slide-to="1"></li>
+            <li data-target="#header-carousel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/slide.png" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Slide #1</h3>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/slide.png" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Slide #2</h3>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/slide.png" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3>Slide #3</h3>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#header-carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#header-carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+  </header>
+
+  <main class="container-fluid">
+
+    <div class="row">
+
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+
+    </div>
+
+  </main>
+
+  <footer class="container-fluid">
+
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
