footer created and header cart minor improvements

--- a/index.html
+++ b/index.html
@@ -481,8 +481,14 @@
     </div>
   </div>
 
-  <footer class="container-fluid">
-
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 page-footer__copyright">
+          <span>@ Copyright 2018</span>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
