--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
   <div class="container wrapper">
     <div class="row">
 
-      <main class="col-md-9 order-lg-2">
+      <main class="col-lg-9 order-lg-2">
 
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Library</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Data</li>
+            <li class="breadcrumb-item"><a href="#">Home page</a></li>
+            <li class="breadcrumb-item"><a href="#">Products</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Laptops and Tablets</li>
           </ol>
         </nav>
 
@@ -462,20 +462,107 @@
 
         <div class="row page-pagination">
           <div class="col-md-12 page-pagination__more">
-            Load more...
+            <a href="#">Load more...</a>
           </div>
         </div>
 
       </main>
 
       <aside class="col-lg-3 order-lg-1 sidebar">
+
         <div class="container-fluid sidebar-filter">
-          device type
-          <br>
-          color
-          <br>
-          ram
+
+          <form>
+            <fieldset class="form-group">
+              <legend>Device type</legend>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt1" id="opt1" value="opt1" checked>
+                <label class="form-check-label" for="opt1">
+                  Laptop
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt2" id="opt2" value="opt2">
+                <label class="form-check-label" for="opt2">
+                  Tablet
+                </label>
+              </div>
+            </fieldset>
+
+            <fieldset class="form-group">
+              <legend>Color</legend>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt3" id="opt3" value="opt3" checked>
+                <label class="form-check-label" for="opt3">
+                  Black
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt4" id="opt4" value="opt4">
+                <label class="form-check-label" for="opt4">
+                  Red
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt5" id="opt5" value="opt5">
+                <label class="form-check-label" for="opt5">
+                  Green
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt6" id="opt6" value="opt6">
+                <label class="form-check-label" for="opt6">
+                  Blue
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt7" id="opt7" value="opt7">
+                <label class="form-check-label" for="opt7">
+                  Orange
+                </label>
+              </div>
+            </fieldset>
+
+            <fieldset class="form-group">
+              <legend>RAM</legend>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt8" id="opt8" value="opt8" checked>
+                <label class="form-check-label" for="opt8">
+                  1GB
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt9" id="opt9" value="opt9">
+                <label class="form-check-label" for="opt9">
+                  2GB
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt10" id="opt10" value="opt10">
+                <label class="form-check-label" for="opt10">
+                  4GB
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt11" id="opt11" value="opt11">
+                <label class="form-check-label" for="opt11">
+                  6GB
+                </label>
+              </div>
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="opt12" id="opt12" value="opt12">
+                <label class="form-check-label" for="opt12">
+                  8GB
+                </label>
+              </div>
+            </fieldset>
+
+            <a href="#" class="sidebar-filter__more">Show more options...</a>
+            
+            <button type="submit" class="btn btn-primary btn-block sidebar-filter__submit">Submit</button>
+          </form>
         </div>
+
       </aside>
 
     </div>
