--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
               <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
             </form>
-            <button class="btn btn-outline-success my-2 my-sm-0 page-header__cart-btn" type="submit"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span>4</span></button>
+            <button class="btn btn-outline-success my-2 my-sm-0 page-header__cart-btn" type="submit"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span id="cart-counter" class="page-header__cart-counter">4</span></button>
           </div>
 
         </nav>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="row page-header__carousel">
+    <div class="page-header__carousel">
       <div class="container">
 
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
@@ -581,5 +581,6 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
