--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Title</title>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="lib/fontawesome/css/fontawesome-all.min.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <link rel="shortcut icon" href="img/icon-1.png" type="image/png">
 </head>
 <body>
 
@@ -51,9 +53,9 @@
             </ul>
             <form class="form-inline my-2 my-lg-0 page-header__navbar-search">
               <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-search" aria-hidden="true"></i></button>
             </form>
-            <button class="btn btn-outline-success my-2 my-sm-0 page-header__cart-btn" type="submit"><i class="fa fa-shopping-cart" aria-hidden="true"></i><span id="cart-counter" class="page-header__cart-counter">4</span></button>
+            <button class="btn btn-outline-success my-2 my-sm-0 page-header__cart-btn" type="submit"><i class="fas fa-shopping-cart" aria-hidden="true"></i><span id="cart-counter" class="page-header__cart-counter">4</span></button>
           </div>
 
         </nav>
@@ -151,10 +153,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
@@ -163,7 +165,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -187,10 +189,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">1250 <sup>99</sup></div>
@@ -199,7 +201,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -223,10 +225,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
@@ -235,7 +237,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -259,10 +261,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
@@ -271,7 +273,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -295,10 +297,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">1250 <sup>99</sup></div>
@@ -307,7 +309,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -331,10 +333,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
@@ -343,7 +345,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -367,10 +369,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
@@ -379,7 +381,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -403,10 +405,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">1250 <sup>99</sup></div>
@@ -415,7 +417,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
@@ -439,10 +441,10 @@
                 </div>
                 <div class="item-buttons">
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                    <i class="fas fa-expand-arrows-alt" aria-hidden="true"></i>
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0">
-                    <i class="fa fa-heart" aria-hidden="true"></i>
+                    <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
@@ -451,7 +453,7 @@
                     More details
                   </button>
                   <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
-                    Add to cart <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                    Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
               </div>
