standard bootstrap classes added.

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -197,10 +197,10 @@
                 </div>
                 <div class="item-price">1250 <sup>99</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -233,10 +233,10 @@
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -269,10 +269,10 @@
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -305,10 +305,10 @@
                 </div>
                 <div class="item-price">1250 <sup>99</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -341,10 +341,10 @@
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -377,10 +377,10 @@
                 </div>
                 <div class="item-price">$599 <sup>25</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -413,10 +413,10 @@
                 </div>
                 <div class="item-price">1250 <sup>99</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
@@ -449,10 +449,10 @@
                 </div>
                 <div class="item-price">$399 <sup>50</sup></div>
                 <div class="item-actions">
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__more">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
                   </button>
-                  <button class="btn btn-outline-success my-2 my-sm-0 item-actions__cart">
+                  <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__cart">
                     Add to cart <i class="fas fa-shopping-cart" aria-hidden="true"></i>
                   </button>
                 </div>
