JS price counter added.

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
-                <div class="item-price">1250 <sup>99</sup></div>
+                <div class="item-price">$1250 <sup>99</sup></div>
                 <div class="item-actions">
                   <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
@@ -303,7 +303,7 @@
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
-                <div class="item-price">1250 <sup>99</sup></div>
+                <div class="item-price">$1250 <sup>99</sup></div>
                 <div class="item-actions">
                   <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
@@ -411,7 +411,7 @@
                     <i class="fas fa-heart" aria-hidden="true"></i>
                   </button>
                 </div>
-                <div class="item-price">1250 <sup>99</sup></div>
+                <div class="item-price">$1250 <sup>99</sup></div>
                 <div class="item-actions">
                   <button class="btn btn-block btn-outline-success my-2 my-sm-0 item-actions__more">
                     More details
